--- a/packages/chealt.com/public/Vaccinations/index.module.css
+++ b/packages/chealt.com/public/Vaccinations/index.module.css
@@ -2,3 +2,7 @@
   margin: var(--gap--xl) 0;
   overflow-x: auto;
 }
+
+.newVaccination {
+  margin: auto;
+}
